Fixed services table formatting Fixed header z-index Fixed section div formatting

--- a/css/main.scss
+++ b/css/main.scss
@@ -40,6 +40,7 @@ header {
   box-sizing: border-box;
   background-color: #373948;
   position: fixed;
+  z-index: 1;
 }
 
 header h1 {
@@ -98,8 +99,8 @@ section {
     overflow: hidden;
 
     div {
-        padding-left: 20%;
-        padding-right: 20%;
+        padding-left: 25%;
+        padding-right: 25%;
     }
 }
 
@@ -159,6 +160,11 @@ section#services {
     }
 
     table {
+        position: relative;
+        padding-top: 2%;
+        left: 50%;
+        transform: translate(-50%,0%);
+
         tr {
             padding-top: 50px;
             padding-bottom: 50px;
@@ -197,7 +203,7 @@ section#services {
 
     .label
     {
-        padding-top: 80px;
+        padding-top: 67px;
         font-size: 20px;
         font-weight: normal;
     }
